Fix comment caron icon vertical alignment

--- a/assets/less/components/comment/CommentHeader.less
+++ b/assets/less/components/comment/CommentHeader.less
@@ -82,6 +82,7 @@
 
     &:before {
       font-size: 12px;
+      line-height: 21px;
     }
 
     &.m-collapsed {
